@@ -170,9 +170,9 @@ DEBUG_CFLAGS := $(patsubst -O%,-Og,$(DPKG_CFLAGS))
 ifeq ($(DEB_HOST_ARCH),ia64)
     EXTRA_OPT_CFLAGS += -O2
 endif
-# see #972202
-ifeq ($(DEB_HOST_ARCH),sh4)
-    EXTRA_OPT_CFLAGS += -O1
+# see #972202, and https://gcc.gnu.org/PR97431
+ifneq (,$(filter $(DEB_HOST_ARCH), hppa sh4))
+    EXTRA_OPT_CFLAGS += -fno-inline-small-functions
 endif
 ifneq (,$(filter $(DEB_HOST_ARCH), ppc64 ppc64el))
     OPT_CFLAGS += -fexceptions
