@@ -9,6 +9,8 @@ python3.9 (3.9.1~rc1-1) unstable; urgency=medium
   * Bump standards version.
   * Add build conflict with git, or else the git information of the packaging
     is encoded in the upstream version information.
+  * Build with -fno-inline-small-functions on hppa and sh4.
+    Closes: #972458, #972202.
 
  -- Matthias Klose <doko@debian.org>  Fri, 27 Nov 2020 07:09:40 +0100
 
